k8s/network-policies/default-deny/faculty-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: faculty-default-deny
  namespace: faculty
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
