k8s/network-policies/default-deny/research-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: research-default-deny
  namespace: research
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
