k8s/network-policies/default-deny/student-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: student-default-deny
  namespace: student
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
